[project]
name = "vulnscanner"
author = "therayyanawaz"
version = "0.2"
description = "Free-data vulnerability ingestion and caching foundation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx==0.27.0",
  "anyio==4.4.0",
  "tenacity==8.5.0",
  "python-dateutil==2.9.0.post0",
  "click==8.1.7",
  "sqlite-utils==3.36",
  "typing-extensions==4.12.2",
  "tzdata==2024.1",
]

[project.scripts]
vulnscanner = "vulnscanner.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["vulnscanner*"]
exclude = []


