[project]
name = "vulnscanner"
version = "0.2.0"
description = "Free-data vulnerability ingestion and caching foundation"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "therayyanawaz", email = "therayyanawaz@gmail.com"}
]
maintainers = [
    {name = "therayyanawaz", email = "therayyanawaz@gmail.com"}
]
keywords = ["vulnerability", "security", "nvd", "cve", "osv", "scanning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]
dependencies = [
  "httpx>=0.27.0,<1.0.0",
  "anyio>=4.4.0,<5.0.0",
  "tenacity>=8.5.0,<9.0.0",
  "python-dateutil>=2.9.0,<3.0.0",
  "click>=8.1.7,<9.0.0",
  "sqlite-utils>=3.36,<4.0.0",
  "typing-extensions>=4.12.2",
  "tzdata>=2024.1",
]

[project.urls]
Homepage = "https://github.com/therayyanawaz/VulnScanner"
Documentation = "https://github.com/therayyanawaz/VulnScanner#readme"
Repository = "https://github.com/therayyanawaz/VulnScanner"
Issues = "https://github.com/therayyanawaz/VulnScanner/issues"
Changelog = "https://github.com/therayyanawaz/VulnScanner/releases"

[project.scripts]
vulnscanner = "vulnscanner.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["vulnscanner*"]
exclude = []

# Static version is defined in [project] section above

# Development tools configuration
[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true


